<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinkedJobs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="loading">Loading &#8230;</string>
    <string name="welcome_text">Welcome %1$s %2$s, You are a %3$s</string>
    <string name="location_hint">Location…</string>
    <string name="date_posted_text">Date Posted</string>

    <string name="all_time_posted_text">All</string>
    <string name="_1_day_ago_date_posted">1 day ago</string>
    <string name="_2_7_days_ago_posted">2-7 days ago</string>
    <string name="_8_14_days_ago_posted">8-14 days ago</string>
    <string name="_15_30_days_ago_posted">15-30 days ago</string>
    <string name="search_button_text">Search</string>
    <string name="search_jobs_field_title">Keywords, job title or company</string>
    <string name="search_jobs_hint">Search jobs…</string>
    <string name="location_field_title">Postal code, city or state</string>
    <string name="SignInText">Sign In</string>
    <string name="EmailText">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="sign_up_text">Sign Up</string>
</resources>
